--- a/src/sim/tp5/interfaces/Principal.form
+++ b/src/sim/tp5/interfaces/Principal.form
@@ -219,8 +219,9 @@
         <Component class="javax.swing.JTable" name="table_Principal">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="33" rowCount="4">
+              <Table columnCount="34" rowCount="4">
                 <Column editable="false" title="Reloj" type="java.lang.Object"/>
+                <Column editable="true" title="Evento" type="java.lang.Object"/>
                 <Column editable="false" title="T. entre Lleg." type="java.lang.Object"/>
                 <Column editable="false" title="Prox. Lleg." type="java.lang.Object"/>
                 <Column editable="false" title="RND Carga" type="java.lang.Object"/>
@@ -257,6 +258,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
