--- a/src/sim/tp5/interfaces/Principal.form
+++ b/src/sim/tp5/interfaces/Principal.form
@@ -49,21 +49,28 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="txt_tiempo" min="-2" pref="66" max="-2" attributes="0"/>
-                  </Group>
                   <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="0" min="-2" pref="434" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="btn_simular" min="-2" pref="234" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
-                      <Component id="btn_nuevo" min="-2" pref="145" max="-2" attributes="0"/>
-                  </Group>
                   <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btn_simular" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="txt_tiempo" min="-2" pref="66" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                          <Component id="btn_nuevo" min="-2" pref="145" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace min="285" pref="407" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="txt_k" min="-2" pref="65" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
@@ -112,6 +119,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txt_tiempo" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txt_k" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -160,7 +169,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ejercicio 33: Estaci&#xf3;n de Servicio"/>
+        <Property name="text" type="java.lang.String" value="Estaci&#xf3;n de Servicio"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
@@ -219,7 +228,7 @@
         <Component class="javax.swing.JTable" name="table_Principal">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="34" rowCount="4">
+              <Table columnCount="39" rowCount="4">
                 <Column editable="false" title="Reloj" type="java.lang.Object"/>
                 <Column editable="true" title="Evento" type="java.lang.Object"/>
                 <Column editable="false" title="T. entre Lleg." type="java.lang.Object"/>
@@ -238,6 +247,11 @@
                 <Column editable="false" title="Cola2" type="java.lang.Object"/>
                 <Column editable="false" title="Estado3" type="java.lang.Object"/>
                 <Column editable="false" title="Cola3" type="java.lang.Object"/>
+                <Column editable="false" title="RND Purga" type="java.lang.Object"/>
+                <Column editable="false" title="porc Max Purga" type="java.lang.Object"/>
+                <Column editable="false" title="T. entre purgas" type="java.lang.Object"/>
+                <Column editable="false" title="Prox purga" type="java.lang.Object"/>
+                <Column editable="false" title="Fin purga" type="java.lang.Object"/>
                 <Column editable="false" title="T. Atenc." type="java.lang.Object"/>
                 <Column editable="false" title="Gom" type="java.lang.Object"/>
                 <Column editable="false" title="Estado Gom." type="java.lang.Object"/>
@@ -252,12 +266,37 @@
                 <Column editable="false" title="Esp. Acum. Gom." type="java.lang.Object"/>
                 <Column editable="false" title="Esp. Acum. Neg." type="java.lang.Object"/>
                 <Column editable="false" title="Cont. Cli. Surt." type="java.lang.Object"/>
-                <Column editable="true" title="Cont. Cli. Gom." type="java.lang.Object"/>
+                <Column editable="false" title="Cont. Cli. Gom." type="java.lang.Object"/>
                 <Column editable="false" title="Cont. Cli.Neg" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -521,6 +560,13 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_nuevoActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel9">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ingrese el K (en minutos):"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txt_k">
     </Component>
   </SubComponents>
 </Form>
